# Artistic-Typography-OCR-Benchmark

./: README.md  pyproject.toml  run_pipeline.py
configs/: pipeline_config.json
corpus/normalized/: corpus_master_v1.jsonl
corpus/raw/: raw_input_v1.jsonl
corpus/splits/: plans_v1.jsonl
runs/run_0001/images/: plan_000001.ppm  plan_000002.ppm  plan_000003.ppm  plan_000004.ppm  plan_000005.ppm
runs/run_0001/manifests/: all.jsonl  train.jsonl
runs/run_0001/qc/: failures.jsonl  qc_summary.json
scripts/: demo_run.sh
src/art_ocr_benchmark/: __init__.py  corpus_builder.py  io_utils.py  length_buckets.py  manifest_builder.py  pipeline.py  planner.py  qc.py  renderers.py  schemas.py  text_normalizer.py
