[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artistic-ocr-benchmark"
version = "0.1.0"
description = "Reproducible artistic typography OCR/VLM benchmark data generation framework"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
